--- a/.github/workflows/weekly-build.yml
+++ b/.github/workflows/weekly-build.yml
@@ -18,8 +18,10 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install pyinstaller
-        run: pip install pyinstaller
+      - name: Install pyinstaller and dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pyinstaller pillow requests pywebview
 
       - name: Find folder with highest number
         id: find-folder
@@ -68,7 +70,6 @@ jobs:
       - name: Get version tag
         id: get_version
         run: |
-          # Use folder number as version, otherwise use datetime
           VERSION="v${FOLDER:-$(date +'%Y%m%d%H%M%S')}"
           echo "version=$VERSION" >> $GITHUB_OUTPUT
 
