--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Windows Build and Release
+name: Build and Release
 
 on:
   workflow_dispatch:
@@ -21,20 +21,20 @@ jobs:
           python -m pip install --upgrade pip
           pip install pyinstaller pillow requests pywebview
 
-      - name: Find folder with highest number in versions/
-        id: find-folder
+      - name: Build and prepare release
+        id: build_and_release
         shell: bash
         run: |
+          set -e
           cd versions
-          FOLDER=$(find . -maxdepth 1 -type d -regex './[0-9]+(\.[0-9]+)?' | sed 's|./||' | sort -V | tail -n 1)
-          echo "FOLDER=versions/$FOLDER" >> $GITHUB_ENV
-          echo "FOLDER_NAME=$FOLDER" >> $GITHUB_ENV
-          echo "Folder with highest number: versions/$FOLDER"
+          echo "Available folders:"
+          ls -l
+          highest_folder=$(find . -maxdepth 1 -type d -regex './[0-9]+(\.[0-9]+)?' | sed 's|./||' | sort -V | tail -n 1)
+          echo "Highest folder: $highest_folder"
+          cd "$highest_folder"
 
-      - name: Build all .py scripts with PyInstaller (--no-console if needed)
-        shell: bash
-        run: |
-          cd "${{ env.FOLDER }}"
+          echo "Listing .py files in $(pwd):"
+          ls -l *.py || true
           shopt -s nullglob
           pyfiles=(*.py)
           if [ ${#pyfiles[@]} -eq 0 ]; then
@@ -42,6 +42,7 @@ jobs:
             exit 1
           fi
           for f in "${pyfiles[@]}"; do
+            echo "Building $f"
             if [[ "$f" == *terminal* ]]; then
               pyinstaller --onefile --icon=../../db.ico "$f"
             else
@@ -49,33 +50,25 @@ jobs:
             fi
           done
 
-      - name: Collect built EXEs
-        shell: bash
-        run: |
-          mkdir -p dist_upload
-          cd "${{ env.FOLDER }}/dist"
-          cp *.exe ../../../dist_upload/
-
-      - name: Prepare Release Notes
-        id: release_notes
-        shell: bash
-        run: |
-          echo "## Changelog" > release_body.md
-          cat "${{ env.FOLDER }}/changelog.md" >> release_body.md
-          echo -e "\n## Commit History\n" >> release_body.md
+          mkdir -p ../../../dist_upload
+          cp dist/*.exe ../../../dist_upload/
+          cd ..
+          if [ -f "$highest_folder/changelog.md" ]; then
+            cat "$highest_folder/changelog.md" > ../../release_body.md
+          else
+            echo "No changelog.md found in $highest_folder." > ../../release_body.md
+          fi
+          cd ../..
+          echo "## Commit History" >> release_body.md
           git log --pretty=format:"- %h %s (%an, %ad)" --date=short >> release_body.md
-
-      - name: Get version tag (vX.X format from folder name)
-        id: get_version
-        run: |
-          VERSION="v${{ env.FOLDER_NAME }}"
-          echo "version=$VERSION" >> $GITHUB_OUTPUT
+          echo "tag=v$highest_folder" >> $GITHUB_OUTPUT
+        # All outputs are handled within this step
 
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ steps.get_version.outputs.version }}
-          name: Release ${{ steps.get_version.outputs.version }}
+          tag_name: ${{ steps.build_and_release.outputs.tag }}
+          name: Release ${{ steps.build_and_release.outputs.tag }}
           body_path: release_body.md
           files: dist_upload/*.exe
         env:
